# Wordly

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .flake8  pyproject.toml
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/utils/: utils.py
frontend/css/: style.css
src/: .env.template  Dockerfile  main.py  rabbitmq-init.sh
src/alembic/: env.py
src/alembic/versions/: 2025_07_20_2035-0deb7e2a7cbf_fresh_start_with_naming_convention.py  2025_07_27_1305-e9f11e4b1e0e_create_user_model.py  2025_07_27_1405-72108d98e173_initial_with_uuid_ids.py  2025_07_27_1729-5db27a97919f_fix_updated_at_default.py  2025_07_28_0926-18048d287bf8_add_is_subscribed_field_to_users.py  2025_07_28_1144-ec984ff528d0_add_email_verification_codes_table.py  2025_07_31_1502-9f7957d0a177_add_timezone_to_datetime_fields.py  2025_08_03_1330-d3a9333d8218_add_refresh_tokens_table.py  2025_08_18_0606-2052eca47f52_add_verifier_hash_to_refresh_sessions.py  2025_08_18_0659-a09782f1b84e_add_timezone_support_to_expires_at_in_.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  routes.py
src/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  utils.py
src/auth/crud/: __init__.py  refresh_session_protocol.py  sqlalchemy_refresh.py  sqlalchemy_verification.py  (+1 more)
src/core/: celery_tasks.py  config.py  settings.py
src/db/: session.py
src/templates/: index.html  login.html  register.html  verify_email.html
src/users/: models.py  routes.py  schemas.py  services.py
src/utils/: __init__.py  utils.py
(+36 files in other folders)
