[project]
name = "wordly-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor",email = "egor.ilchenko23@list.ru"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "groq (>=0.28.0,<0.29.0)",
    "pyspellchecker (>=0.8.3,<0.9.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
alembic = "^1.16.1"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    alembic
  | migrations
  | env
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip = ["alembic", "migrations", "env", "venv"]
